log
Wed 08 May 2024 02:19:33 AM UTC: 
 tests:  1|8
total_score: 0/70
44e9bf0
Wed 08 May 2024 02:33:06 AM UTC: 
 tests:  1|8
total_score: 0/70
fb08896
Wed 08 May 2024 02:57:53 AM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
c134e6d
Wed 08 May 2024 03:01:00 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
6c9d3c3
Wed 08 May 2024 03:08:09 AM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
27d2dcd
Wed 08 May 2024 03:21:42 AM UTC: 
 treemap.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:66:19: error: unused variable ‘nodoAux’ [-Werror=unused-variable]
   66 |         TreeNode *nodoAux = arbolito->root;
      |                   ^~~~~~~
treemap.c:70:5: error: statement with no effect [-Werror=unused-value]
   70 |     3. Si la clave del nodo actual es igual a la clave a insertar, entonces se actualiza el dato del nodo.
      |     ^~
treemap.c:70:7: error: expected ‘;’ before ‘Si’
   70 |     3. Si la clave del nodo actual es igual a la clave a insertar, entonces se actualiza el dato del nodo.
      |       ^~~
      |       ;
cc1: all warnings being treated as errors
Compilation failed
6bfe34f
Wed 08 May 2024 03:30:57 AM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:74:43: error: ‘TreeNode’ has no member named ‘key’
   74 |             if (is_equal(arbolito, nodoAux->key, key))
      |                                           ^~
treemap.c:75:9: error: expected expression before ‘}’ token
   75 |         }
      |         ^
treemap.c:79:5: error: statement with no effect [-Werror=unused-value]
   79 |     3. Si la clave del nodo actual es igual a la clave a insertar, entonces se actualiza el dato del nodo.
      |     ^~
treemap.c:79:7: error: expected ‘;’ before ‘Si’
   79 |     3. Si la clave del nodo actual es igual a la clave a insertar, entonces se actualiza el dato del nodo.
      |       ^~~
      |       ;
cc1: all warnings being treated as errors
Compilation failed
ae61611
Thu 09 May 2024 07:34:30 PM UTC: 
 treemap.c | 30 +++++++++++++++---------------
 1 file changed, 15 insertions(+), 15 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:84:29: error: ‘nodoPosicion’ undeclared (first use in this function)
   84 |         nuevoNodo->parent = nodoPosicion;
      |                             ^~~~~~~~~~~~
treemap.c:84:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
98d3799
Thu 09 May 2024 07:35:09 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:11: error: unused variable ‘pair’ [-Werror=unused-variable]
   58 |     Pair *pair = NULL;
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
e9866d1
Thu 09 May 2024 07:50:25 PM UTC: 
 treemap.c | 23 ++++++++++++++---------
 1 file changed, 14 insertions(+), 9 deletions(-)
 tests:  6|6
total_score: 5/70
5460629
Thu 09 May 2024 07:53:23 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  5|6
total_score: 5/70
9f50e4a
Thu 09 May 2024 07:55:38 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|6
total_score: 5/70
6e92f49
Thu 09 May 2024 07:57:36 PM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
435cb2e
Thu 09 May 2024 07:58:04 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|6
total_score: 5/70
8a93da4
Thu 09 May 2024 08:04:28 PM UTC: 
 treemap.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  8|5
total_score: 15/70
b5c82ee
Thu 09 May 2024 08:11:42 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  9|5
total_score: 15/70
8fd5929
Thu 09 May 2024 08:12:35 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|5
total_score: 15/70
29eee8f
